# Mel

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
Mel/: CMakeLists.txt  Mel.cpp  Mel.h  Mel.qrc  version.h.in
Mel/res/: README.md
Mel/widgets/: BackgroundWidget.cpp  BackgroundWidget.h  ElMainWindow.cpp  ElMainWindow.h
cmake/: ela.cmake  qt_set.cmake  qt_win_install.cmake  qt_win_run.cmake  win_install.cmake  win_run.cmake
example/: BackgroundWidgetExample.cpp  BackgroundWidgetExample.h  BackgroundWidgetExample.ui  CMakeLists.txt  README.md  backgroundWidget.cpp  backgroundWidget.h  backgroundwidget.cpp  backgroundwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/: main.cpp  mainwindow.cpp  mainwindow.h
